--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,6 +10,7 @@
 @import "../components/Button";
 @import "../components/_PickedStage";
 @import "../components/_InitialStage";
+@import "../components/_FinalStage";
 
 // Variables for Colors
 @import "./colors";
