--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -571,6 +571,13 @@ body,
   align-items: center;
   background: radial-gradient(circle, hsl(214, 47%, 23%), hsl(237, 49%, 15%)) no-repeat;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+  min-height: 350px;
+}
+
+@media only screen and (max-widht: 768px) {
+  body,
+  #root {
+    overflow: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
