--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -22,6 +22,13 @@
     box-sizing: border-box;
 }
 
+main {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .semiBold {
     font-weight: 600;
 }
@@ -39,7 +46,7 @@ body,
     background: radial-gradient($BG-RADIAL) no-repeat;
     width: 100vw;
     height: 100%;
-    min-height: 350px;
+    min-height: 100vh;
 }
 
 @media only screen and (max-widht:768px) {
@@ -47,5 +54,11 @@ body,
     body,
     #root {
         overflow: none;
+        height: 100%;
+        max-height: 600px;
+    }
+
+    main {
+        width: 300px;
     }
 }
