--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -60,7 +60,6 @@ footer p a {
   footer .rules {
     align-self: center;
     margin: 0;
-    margin-bottom: 55px;
     letter-spacing: 2.5px;
     padding-left: 2px;
   }
@@ -555,6 +554,13 @@ header .score_box .points {
   box-sizing: border-box;
 }
 
+main {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .semiBold {
   font-weight: 600;
 }
@@ -572,12 +578,17 @@ body,
   background: radial-gradient(circle, hsl(214, 47%, 23%), hsl(237, 49%, 15%)) no-repeat;
   width: 100vw;
   height: 100%;
-  min-height: 350px;
+  min-height: 100vh;
 }
 
 @media only screen and (max-widht: 768px) {
   body,
   #root {
     overflow: none;
+    height: 100%;
+    max-height: 600px;
+  }
+  main {
+    width: 300px;
   }
 }/*# sourceMappingURL=styles.css.map */
