--- a/src/components/_PickedStage.scss
+++ b/src/components/_PickedStage.scss
@@ -41,6 +41,7 @@
         gap: 100px;
         height: 400px;
         color: $clr-text-1;
+        text-wrap: nowrap;
 
         padding-top: 300px;
 
@@ -48,7 +49,7 @@
 
             .box_game {
                 transform: scale(1);
-                margin-left: -10px;
+                margin-left: -40px;
                 margin-top: -250px;
                 animation: res_left 2s ease-in-out;
             }
